--- a/src/components/seeYouSoon.css
+++ b/src/components/seeYouSoon.css
@@ -35,3 +35,26 @@
     margin: 3px 0; /* Adjust spacing within contact information */
   }
   
+  @media (max-width: 425px) {
+    .see-you-soon-container {
+        flex-direction: column; /* Stack items vertically on small screens */
+        padding: 10px; /* Adjust padding for smaller screens */
+        min-height: 100vh;
+    }
+
+    .image-container {
+        height: 50vh; /* Adjust height for smaller screens */
+    }
+
+    .text-container {
+        padding: 10px; /* Adjust padding for smaller screens */
+    }
+
+    .see-you-soon-heading {
+        font-size: 1.5em; /* Smaller font size */
+    }
+
+    .contact-info {
+        margin-top: 20px; /* Less margin for mobile */
+    }
+}
